Code clean after Sonalift review